--- a/404.html
+++ b/404.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     
-    <title>Escrow My Ether</title>
+    <title>Scan Pay</title>
 	<script>
     sessionStorage.redirect = location.href;
   </script>
-<meta http-equiv="refresh" content="0;URL='http://escrowmyether.com'"></meta>
+<meta http-equiv="refresh" content="0;URL='http://scanpay.asia'"></meta>
   </head>
 <body>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
